src/test/ui/methods/method-call-lifetime-args-unresolved.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/method-call-lifetime-args-unresolved.rs:2:15
   |
LL | fn main() {
   |        - help: consider introducing lifetime `'a` here: `<'a>`
LL |     0.clone::<'a>();
   |               ^^ undeclared lifetime

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-unresolved.rs:2:15
   |
LL |     0.clone::<'a>();
   |               ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |     fn clone(&self) -> Self;
   |              ^
   = help: remove the explicit lifetime argument

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
